examples/test/testpolicy2757.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2757
  namespace: namespace25
spec:
  podSelector:
    matchLabels:
      key24: value13
      key28: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value26
          key19: value11
          key37: value17
      podSelector:
        matchLabels:
          key43: value25
          key39: value45
